unpackaged/main/default/objects/Top_Spec__c/fields/Furniture_package__c.field-meta.xml
<CustomField>
    <fullName>Furniture_package__c</fullName>
    <inlineHelpText>Please detail the exhibitor furniture package</inlineHelpText>
    <label>Furniture package</label>
    <type>TextArea</type>
</CustomField>