unpackaged/main/default/objects/Top_Spec__c/fields/Furniture_Packages__c.field-meta.xml
<CustomField>
    <fullName>Furniture_Packages__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Furniture Packages</label>
    <type>Checkbox</type>
</CustomField>