unpackaged/main/default/objects/Top_Spec__c/fields/Furniture_Spares_list_required__c.field-meta.xml
<CustomField>
    <fullName>Furniture_Spares_list_required__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Are any spares required for this show?</inlineHelpText>
    <label>Spares list required?</label>
    <type>Checkbox</type>
</CustomField>