unpackaged/main/default/objects/Top_Spec__c/fields/Graphics_Cut_off__c.field-meta.xml
<CustomField>
    <fullName>Graphics_Cut_off__c</fullName>
    <inlineHelpText>Please enter the graphics cut off date and time</inlineHelpText>
    <label>Graphics cut off</label>
    <type>DateTime</type>
</CustomField>