unpackaged/main/default/objects/Top_Spec__c/fields/Hostess_Cut_off__c.field-meta.xml
<CustomField>
    <fullName>Hostess_Cut_off__c</fullName>
    <inlineHelpText>Please enter the cut off date</inlineHelpText>
    <label>Hostess Cut off</label>
    <type>DateTime</type>
</CustomField>