unpackaged/main/default/objects/Top_Spec__c/fields/Hostess_Detail__c.field-meta.xml
<CustomField>
    <fullName>Hostess_Detail__c</fullName>
    <inlineHelpText>Please enter any hostess detail. You can also attach visuals by editing the field then clicking on the image icon.</inlineHelpText>
    <label>Hostess Additional Information</label>
    <length>10000</length>
    <type>Html</type>
</CustomField>