unpackaged/main/default/objects/Top_Spec__c/fields/Hostess_Surcharge__c.field-meta.xml
<CustomField>
    <fullName>Hostess_Surcharge__c</fullName>
    <inlineHelpText>Please enter the surcharge date</inlineHelpText>
    <label>Hostess Surcharge</label>
    <type>Date</type>
</CustomField>