unpackaged/main/default/objects/Top_Spec__c/fields/Internet_Cut_off__c.field-meta.xml
<CustomField>
    <fullName>Internet_Cut_off__c</fullName>
    <inlineHelpText>Please enter the cut off date</inlineHelpText>
    <label>Internet Cut off</label>
    <type>DateTime</type>
</CustomField>