unpackaged/main/default/objects/Top_Spec__c/fields/Internet_Surcharge__c.field-meta.xml
<CustomField>
    <fullName>Internet_Surcharge__c</fullName>
    <inlineHelpText>Please enter the surcharge date</inlineHelpText>
    <label>Internet Surcharge</label>
    <type>Date</type>
</CustomField>