unpackaged/main/default/objects/Top_Spec__c/fields/Lead_Capture_Detail__c.field-meta.xml
<CustomField>
    <fullName>Lead_Capture_Detail__c</fullName>
    <inlineHelpText>Please enter any additional contracted services information related to Lead Capture here. You can also attach visuals by editing the field then clicking on the image icon.</inlineHelpText>
    <label>Lead Capture Additional Information</label>
    <length>10000</length>
    <type>Html</type>
</CustomField>