unpackaged/main/default/objects/Top_Spec__c/fields/Logistics_Manager__c.field-meta.xml
<CustomField>
    <fullName>Logistics_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Please select that logistics manager</inlineHelpText>
    <label>Logistics Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>UsertoTop_SpecsLogisitics</relationshipName>
    <type>Lookup</type>
</CustomField>