unpackaged/main/default/objects/Top_Spec__c/fields/Manpower_Surcharge__c.field-meta.xml
<CustomField>
    <fullName>Manpower_Surcharge__c</fullName>
    <inlineHelpText>Please enter the manpower surcharge date</inlineHelpText>
    <label>Manpower Surcharge</label>
    <type>Date</type>
</CustomField>