unpackaged/main/default/objects/Top_Spec__c/fields/Marketin_If_no_to_Exhibitor_Graphics_why__c.field-meta.xml
<CustomField>
    <fullName>Marketin_If_no_to_Exhibitor_Graphics_why__c</fullName>
    <inlineHelpText>If we are not allowed to market Exhibitor Graphics, please enter a reason why</inlineHelpText>
    <label>If no to Exhibitor Graphics, why?</label>
    <type>TextArea</type>
</CustomField>