unpackaged/main/default/objects/Top_Spec__c/fields/Marketin_If_no_to_Show_Ready_why__c.field-meta.xml
<CustomField>
    <fullName>Marketin_If_no_to_Show_Ready_why__c</fullName>
    <inlineHelpText>If we are not allowed to market Show Ready, please enter a reason why</inlineHelpText>
    <label>If no to Show Ready, why?</label>
    <type>TextArea</type>
</CustomField>