unpackaged/main/default/objects/Top_Spec__c/fields/Marketing_AV__c.field-meta.xml
<CustomField>
    <fullName>Marketing_AV__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Can we market AV?</inlineHelpText>
    <label>AV</label>
    <type>Checkbox</type>
</CustomField>