unpackaged/main/default/objects/Top_Spec__c/fields/Marketing_Carpet__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Carpet__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Can we market Carpets?</inlineHelpText>
    <label>Carpet</label>
    <type>Checkbox</type>
</CustomField>