unpackaged/main/default/objects/Top_Spec__c/fields/Marketing_Exhibitor_Manual__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Exhibitor_Manual__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Are we allowed to market the Exhibitor Manual?</inlineHelpText>
    <label>Exhibitor Manual</label>
    <type>Checkbox</type>
</CustomField>