unpackaged/main/default/objects/Top_Spec__c/fields/Marketing_If_no_to_Electrics_why__c.field-meta.xml
<CustomField>
    <fullName>Marketing_If_no_to_Electrics_why__c</fullName>
    <inlineHelpText>Please enter a reason if we are not allowed to market Electrics</inlineHelpText>
    <label>If no to Electrics, why?</label>
    <type>TextArea</type>
</CustomField>