unpackaged/main/default/objects/Top_Spec__c/fields/Marketing_If_no_to_furniture__c.field-meta.xml
<CustomField>
    <fullName>Marketing_If_no_to_furniture__c</fullName>
    <inlineHelpText>If we are not allowed to market furniture, please enter a reason why</inlineHelpText>
    <label>If no to furniture, why?</label>
    <type>TextArea</type>
</CustomField>