unpackaged/main/default/objects/Top_Spec__c/fields/Marketing_If_no_to_rigging_why__c.field-meta.xml
<CustomField>
    <fullName>Marketing_If_no_to_rigging_why__c</fullName>
    <inlineHelpText>If we are not allowed to market Rigging, please enter a reason why</inlineHelpText>
    <label>If no to rigging, why?</label>
    <type>TextArea</type>
</CustomField>