unpackaged/main/default/objects/Top_Spec__c/fields/Marketing_If_no_to_shell_scheme_why__c.field-meta.xml
<CustomField>
    <fullName>Marketing_If_no_to_shell_scheme_why__c</fullName>
    <inlineHelpText>If we are not allowed to market shell scheme, please enter a reason why</inlineHelpText>
    <label>If no to shell scheme, why?</label>
    <type>TextArea</type>
</CustomField>