unpackaged/main/default/objects/Top_Spec__c/fields/Marketing_If_no_to_Water_why__c.field-meta.xml
<CustomField>
    <fullName>Marketing_If_no_to_Water_why__c</fullName>
    <inlineHelpText>If we are not allowed to market water, please enter the reason why.</inlineHelpText>
    <label>If no to Water, why?</label>
    <type>TextArea</type>
</CustomField>