unpackaged/main/default/objects/Top_Spec__c/fields/Marketing_Lead_Capture__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Lead_Capture__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Are we able to market Lead Capture?</inlineHelpText>
    <label>Lead Capture</label>
    <type>Checkbox</type>
</CustomField>