unpackaged/main/default/objects/Top_Spec__c/fields/MarketIng_no_to_Space_Only_Stands_DB_why__c.field-meta.xml
<CustomField>
    <fullName>MarketIng_no_to_Space_Only_Stands_DB_why__c</fullName>
    <inlineHelpText>If we are not allowed to Market Space Only Stands / D&amp;B, please enter a reason why</inlineHelpText>
    <label>If no to Space Only Stands/D&amp;B,why?</label>
    <type>TextArea</type>
</CustomField>