unpackaged/main/default/objects/Top_Spec__c/fields/Marketing_no_to_Sprinkler_Installs_why__c.field-meta.xml
<CustomField>
    <fullName>Marketing_no_to_Sprinkler_Installs_why__c</fullName>
    <inlineHelpText>If we are not allowed to Market Sprinkler Installations, please enter a reason why</inlineHelpText>
    <label>If no to Sprinkler Installations, why?</label>
    <type>TextArea</type>
</CustomField>