unpackaged/main/default/objects/Top_Spec__c/fields/Marketing_Organiser_Show_Ready__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Organiser_Show_Ready__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Can we market Organiser Show Ready?</inlineHelpText>
    <label>Organiser Show Ready</label>
    <type>Checkbox</type>
</CustomField>