unpackaged/main/default/objects/Top_Spec__c/fields/Marketing_Rigging__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Rigging__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Can we market Rigging?</inlineHelpText>
    <label>Rigging</label>
    <type>Checkbox</type>
</CustomField>