unpackaged/main/default/objects/Top_Spec__c/fields/Marketing_Shell_Scheme_Extras__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Shell_Scheme_Extras__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Are we allowed to market Shell Scheme Extras?</inlineHelpText>
    <label>Shell Scheme Extras</label>
    <type>Checkbox</type>
</CustomField>