unpackaged/main/default/objects/Top_Spec__c/fields/Marketing_Stand_Approval_Testing__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Stand_Approval_Testing__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Can we market Stand Approval Testing?</inlineHelpText>
    <label>Stand Approval Testing</label>
    <type>Checkbox</type>
</CustomField>