unpackaged/main/default/objects/Top_Spec__c/fields/Marketing_Stand_Cleaning__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Stand_Cleaning__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Can we market Stand Cleaning?</inlineHelpText>
    <label>Stand Cleaning</label>
    <type>Checkbox</type>
</CustomField>