unpackaged/main/default/objects/Top_Spec__c/fields/Marketing_Stand_Security__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Stand_Security__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Can we market Stand Security?</inlineHelpText>
    <label>Stand Security</label>
    <type>Checkbox</type>
</CustomField>