unpackaged/main/default/objects/Top_Spec__c/fields/Marketing_Waste__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Waste__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Can we market waste?</inlineHelpText>
    <label>Waste</label>
    <type>Checkbox</type>
</CustomField>