unpackaged/main/default/objects/Top_Spec__c/fields/Meeting_Rooms_Detail__c.field-meta.xml
<CustomField>
    <fullName>Meeting_Rooms_Detail__c</fullName>
    <inlineHelpText>Please enter any relevant Meeting Rooms Detail. You can also attach visuals by editing the field then clicking on the image icon.</inlineHelpText>
    <label>Meeting Rooms Additional Information</label>
    <length>10000</length>
    <type>Html</type>
</CustomField>