unpackaged/main/default/objects/Top_Spec__c/fields/Nameboards__c.field-meta.xml
<CustomField>
    <fullName>Nameboards__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Nameboards</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Top_Specs1</relationshipName>
    <type>Lookup</type>
</CustomField>