unpackaged/main/default/objects/Top_Spec__c/fields/Online_Manual_Detail__c.field-meta.xml
<CustomField>
    <fullName>Online_Manual_Detail__c</fullName>
    <inlineHelpText>Please enter any relevant details. You can also attach visuals by editing the field then clicking on the image icon.</inlineHelpText>
    <label>Online Manual Additional Information</label>
    <length>10000</length>
    <type>Html</type>
</CustomField>