unpackaged/main/default/objects/Top_Spec__c/fields/OnSite_Offloading_challenges__c.field-meta.xml
<CustomField>
    <fullName>OnSite_Offloading_challenges__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Are there offloading challenges?</inlineHelpText>
    <label>Offloading challenges</label>
    <type>Checkbox</type>
</CustomField>