unpackaged/main/default/objects/Top_Spec__c/fields/OnSite_PPE__c.field-meta.xml
<CustomField>
    <fullName>OnSite_PPE__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Is PPE required?</inlineHelpText>
    <label>PPE required</label>
    <type>Checkbox</type>
</CustomField>