unpackaged/main/default/objects/Top_Spec__c/fields/OnSite_Requirement__c.field-meta.xml
<CustomField>
    <fullName>OnSite_Requirement__c</fullName>
    <inlineHelpText>Any other onsite requirements?</inlineHelpText>
    <label>Requirement</label>
    <type>TextArea</type>
</CustomField>