unpackaged/main/default/objects/Top_Spec__c/fields/OnSite_Storage_on_site__c.field-meta.xml
<CustomField>
    <fullName>OnSite_Storage_on_site__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Is storage available on-site?</inlineHelpText>
    <label>Storage On Site</label>
    <type>Checkbox</type>
</CustomField>