unpackaged/main/default/objects/Top_Spec__c/fields/Opening_Sunday_Close__c.field-meta.xml
<CustomField>
    <fullName>Opening_Sunday_Close__c</fullName>
    <inlineHelpText>What times do the doors close on Sunday?</inlineHelpText>
    <label>Sunday Close</label>
    <type>DateTime</type>
</CustomField>