unpackaged/main/default/objects/Top_Spec__c/fields/Opening_Sunday_Open__c.field-meta.xml
<CustomField>
    <fullName>Opening_Sunday_Open__c</fullName>
    <inlineHelpText>What time do the doors close ?</inlineHelpText>
    <label>Sunday Open</label>
    <type>DateTime</type>
</CustomField>