unpackaged/main/default/objects/Top_Spec__c/fields/Opening_Thursday_Open__c.field-meta.xml
<CustomField>
    <fullName>Opening_Thursday_Open__c</fullName>
    <inlineHelpText>What time do the doors open on Thursday?</inlineHelpText>
    <label>Thursday Open</label>
    <type>DateTime</type>
</CustomField>