unpackaged/main/default/objects/Top_Spec__c/fields/Opening_Tuesday_Start__c.field-meta.xml
<CustomField>
    <fullName>Opening_Tuesday_Start__c</fullName>
    <inlineHelpText>What time do the doors open on Tuesday?</inlineHelpText>
    <label>Tuesday Open</label>
    <type>DateTime</type>
</CustomField>