unpackaged/main/default/objects/Top_Spec__c/fields/Opening_Wednesday_Start__c.field-meta.xml
<CustomField>
    <fullName>Opening_Wednesday_Start__c</fullName>
    <inlineHelpText>What time do the doors open on Wednesday?</inlineHelpText>
    <label>Wednesday Open</label>
    <type>DateTime</type>
</CustomField>