unpackaged/main/default/objects/Top_Spec__c/fields/Organiser_Graphics_Additional_Info__c.field-meta.xml
<CustomField>
    <fullName>Organiser_Graphics_Additional_Info__c</fullName>
    <inlineHelpText>Please enter any Organiser graphical details. You can also attach visuals by editing the field and then clicking on the image icon</inlineHelpText>
    <label>Organiser Graphics Additional Info</label>
    <length>10000</length>
    <type>Html</type>
</CustomField>