unpackaged/main/default/objects/Top_Spec__c/fields/Organiser_Ops_Director__c.field-meta.xml
<CustomField>
    <fullName>Organiser_Ops_Director__c</fullName>
    <inlineHelpText>Please enter the Organiser Ops Directors email address</inlineHelpText>
    <label>Organiser Ops Director</label>
    <length>255</length>
    <type>Text</type>
</CustomField>