unpackaged/main/default/objects/Top_Spec__c/fields/Package__c.field-meta.xml
<CustomField>
    <fullName>Package__c</fullName>
    <inlineHelpText>Please enter Exhibitor package details</inlineHelpText>
    <label>Package</label>
    <type>TextArea</type>
</CustomField>