unpackaged/main/default/objects/Top_Spec__c/fields/Packages_Prices__c.field-meta.xml
<CustomField>
    <fullName>Packages_Prices__c</fullName>
    <label>Packages/Prices</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>