unpackaged/main/default/objects/Top_Spec__c/fields/Parking_Cut_off__c.field-meta.xml
<CustomField>
    <fullName>Parking_Cut_off__c</fullName>
    <inlineHelpText>Please enter the cut off date</inlineHelpText>
    <label>Parking Cut off</label>
    <type>DateTime</type>
</CustomField>