unpackaged/main/default/objects/Top_Spec__c/fields/Parking_Detail__c.field-meta.xml
<CustomField>
    <fullName>Parking_Detail__c</fullName>
    <inlineHelpText>Please enter any Parking Detail. You can also attach visuals by editing the field then clicking on the image icon.</inlineHelpText>
    <label>Parking Additional Information</label>
    <length>10000</length>
    <type>Html</type>
</CustomField>