unpackaged/main/default/objects/Top_Spec__c/fields/Pavillion_Details__c.field-meta.xml
<CustomField>
    <fullName>Pavillion_Details__c</fullName>
    <inlineHelpText>Please enter any additional Pavillion details here. You can also attach visuals by editing the field then clicking on the image icon.</inlineHelpText>
    <label>Pavillion Additional Information</label>
    <length>10000</length>
    <type>Html</type>
</CustomField>