unpackaged/main/default/objects/Top_Spec__c/fields/Payment_Terms__c.field-meta.xml
<CustomField>
    <fullName>Payment_Terms__c</fullName>
    <inlineHelpText>Please select the payment terms</inlineHelpText>
    <label>Payment Terms</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>50% 30 days prior and 50% 7 days prior</fullName>
            </value>
            <value>
                <fullName>50% 30 days prior and 50% 30 days post</fullName>
            </value>
            <value>
                <fullName>100% 30 days pre show</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>25% 90 days prior, 50% 30 days prior, balance 37 post days</fullName>
            </value>
            <value>
                <fullName>75% 90 days prior, 15% 30 days prior, balance 37 days post</fullName>
            </value>
            <value>
                <fullName>100% 30 days prior, change orders 37 days post</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>