unpackaged/main/default/objects/Top_Spec__c/fields/Payment_Terms_Other__c.field-meta.xml
<CustomField>
    <fullName>Payment_Terms_Other__c</fullName>
    <inlineHelpText>Please enter what the other method is if you selected Other for Payment Terms</inlineHelpText>
    <label>Payment Terms (Other)</label>
    <type>TextArea</type>
</CustomField>