unpackaged/main/default/objects/Top_Spec__c/fields/Project_Manager__c.field-meta.xml
<CustomField>
    <fullName>Project_Manager__c</fullName>
    <inlineHelpText>Select the relevant Show Ready project manager. More than 1 can be selected</inlineHelpText>
    <label>Project Manager</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Andrew Dobbs</fullName>
            </value>
            <value>
                <fullName>Max Southall</fullName>
            </value>
            <value>
                <fullName>Matthew Johnson</fullName>
            </value>
            <value>
                <fullName>Deana Sheldon</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>