unpackaged/main/default/objects/Top_Spec__c/fields/Registration_Friday_Close__c.field-meta.xml
<CustomField>
    <fullName>Registration_Friday_Close__c</fullName>
    <inlineHelpText>What time does registration close on Friday?</inlineHelpText>
    <label>Friday Close</label>
    <type>DateTime</type>
</CustomField>