unpackaged/main/default/objects/Top_Spec__c/fields/Registration_Monday_Open__c.field-meta.xml
<CustomField>
    <fullName>Registration_Monday_Open__c</fullName>
    <inlineHelpText>Monday Opening time for Registration</inlineHelpText>
    <label>Monday Open</label>
    <type>DateTime</type>
</CustomField>