unpackaged/main/default/objects/Top_Spec__c/fields/Registration_Saturday_Close__c.field-meta.xml
<CustomField>
    <fullName>Registration_Saturday_Close__c</fullName>
    <inlineHelpText>What time does registration close on Saturday?</inlineHelpText>
    <label>Saturday Close</label>
    <type>DateTime</type>
</CustomField>