unpackaged/main/default/objects/Top_Spec__c/fields/Registration_Tuesday_Open__c.field-meta.xml
<CustomField>
    <fullName>Registration_Tuesday_Open__c</fullName>
    <inlineHelpText>What time does registration open on Tuesday?</inlineHelpText>
    <label>Tuesday Open</label>
    <type>DateTime</type>
</CustomField>