unpackaged/main/default/objects/Top_Spec__c/fields/Rigging_Detail__c.field-meta.xml
<CustomField>
    <fullName>Rigging_Detail__c</fullName>
    <inlineHelpText>Please enter any addition rigging information here. You can also attach visuals by editing the field and then clicking on the image icon.</inlineHelpText>
    <label>Rigging Additional Information</label>
    <length>10000</length>
    <type>Html</type>
</CustomField>