unpackaged/main/default/objects/Top_Spec__c/fields/Rigging_Surcharge__c.field-meta.xml
<CustomField>
    <fullName>Rigging_Surcharge__c</fullName>
    <inlineHelpText>Please enter the surcharge date</inlineHelpText>
    <label>Rigging Surcharge</label>
    <type>Date</type>
</CustomField>