unpackaged/main/default/objects/Top_Spec__c/fields/Schedule_Feature_Areas_Start__c.field-meta.xml
<CustomField>
    <fullName>Schedule_Feature_Areas_Start__c</fullName>
    <label>Feature Areas Start</label>
    <type>DateTime</type>
</CustomField>