unpackaged/main/default/objects/Top_Spec__c/fields/Schedule_Furniture_End__c.field-meta.xml
<CustomField>
    <fullName>Schedule_Furniture_End__c</fullName>
    <label>Furniture End</label>
    <type>DateTime</type>
</CustomField>