unpackaged/main/default/objects/Top_Spec__c/fields/Schedule_Gangway_Carpets_Start__c.field-meta.xml
<CustomField>
    <fullName>Schedule_Gangway_Carpets_Start__c</fullName>
    <label>Gangway Carpets Start</label>
    <type>DateTime</type>
</CustomField>