unpackaged/main/default/objects/Top_Spec__c/fields/Schedule_Mark_out_end__c.field-meta.xml
<CustomField>
    <fullName>Schedule_Mark_out_end__c</fullName>
    <inlineHelpText>When does the mark out complete?</inlineHelpText>
    <label>Mark out (GES) End</label>
    <type>DateTime</type>
</CustomField>