unpackaged/main/default/objects/Top_Spec__c/fields/Schedule_Mark_out_start__c.field-meta.xml
<CustomField>
    <fullName>Schedule_Mark_out_start__c</fullName>
    <inlineHelpText>What is the date and time that Mark out (GES) begins</inlineHelpText>
    <label>Mark out (GES) Start</label>
    <type>DateTime</type>
</CustomField>