unpackaged/main/default/objects/Top_Spec__c/fields/Schedule_Nameboard_End__c.field-meta.xml
<CustomField>
    <fullName>Schedule_Nameboard_End__c</fullName>
    <inlineHelpText>Please enter the date and time that this ends</inlineHelpText>
    <label>Nameboard End</label>
    <type>DateTime</type>
</CustomField>