unpackaged/main/default/objects/Top_Spec__c/fields/Schedule_Shell_Scheme_End__c.field-meta.xml
<CustomField>
    <fullName>Schedule_Shell_Scheme_End__c</fullName>
    <label>Shell Scheme End</label>
    <type>DateTime</type>
</CustomField>