unpackaged/main/default/objects/Top_Spec__c/fields/Schedule_Shell_Scheme_Start__c.field-meta.xml
<CustomField>
    <fullName>Schedule_Shell_Scheme_Start__c</fullName>
    <label>Shell Scheme Start</label>
    <type>DateTime</type>
</CustomField>