unpackaged/main/default/objects/Top_Spec__c/fields/Schedule_Space_Only_Setup_Start__c.field-meta.xml
<CustomField>
    <fullName>Schedule_Space_Only_Setup_Start__c</fullName>
    <label>Space Only Start</label>
    <type>DateTime</type>
</CustomField>