unpackaged/main/default/objects/Top_Spec__c/fields/Seller__c.field-meta.xml
<CustomField>
    <fullName>Seller__c</fullName>
    <label>Seller</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>GES</fullName>
            </value>
            <value>
                <fullName>Organiser</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>