unpackaged/main/default/objects/Top_Spec__c/fields/Service_Desk_Details__c.field-meta.xml
<CustomField>
    <fullName>Service_Desk_Details__c</fullName>
    <defaultValue>&quot;eg Hall floor, Monday 23.03.2015 0800 - 1700, 2 desks&quot;</defaultValue>
    <inlineHelpText>Please enter all relevant Service Desk Details</inlineHelpText>
    <label>Service Desk Additional Information</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>