unpackaged/main/default/objects/Top_Spec__c/fields/Service_Event_Manager__c.field-meta.xml
<CustomField>
    <fullName>Service_Event_Manager__c</fullName>
    <inlineHelpText>The Event manager, taken from the Opportunity</inlineHelpText>
    <label>Service Event Manager</label>
    <length>100</length>
    <type>Text</type>
</CustomField>