unpackaged/main/default/objects/Top_Spec__c/fields/Serviced_by__c.field-meta.xml
<CustomField>
    <fullName>Serviced_by__c</fullName>
    <description>Who is servicing the Service Desk?</description>
    <inlineHelpText>Please select who is servicing the service desk, you can select multiple values</inlineHelpText>
    <label>Serviced by</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Amsterdam</fullName>
            </value>
            <value>
                <fullName>Coventry</fullName>
            </value>
            <value>
                <fullName>Scotland</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>