unpackaged/main/default/objects/Top_Spec__c/fields/Servicing__c.field-meta.xml
<CustomField>
    <fullName>Servicing__c</fullName>
    <inlineHelpText>Please select the office that is servicing the whole show. Please check the Service Desk section for which office is servicing exhibitors</inlineHelpText>
    <label>Servicing</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Amsterdam, NL</fullName>
            </value>
            <value>
                <fullName>Germany</fullName>
            </value>
            <value>
                <fullName>Other (please add below)</fullName>
            </value>
            <value>
                <fullName>UAE Event Management</fullName>
            </value>
            <value>
                <fullName>UK Event Management</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>